*plugin-template-news.txt*

Notable changes since PluginTemplate 1.0


===============================================================================
NEW FEATURES                                     *plugin-template-new-features*

Added llscheck.yml - A GitHub workflow that detects type annotation issues!


===============================================================================
BREAKING CHANGES                                 *plugin-template-new-breaking*

n/a


 vim:tw=78:ts=8:noet:ft=help:norl: