@@ -6,7 +6,8 @@ Notable changes since PluginTemplate 1.0
 ===============================================================================
 NEW FEATURES                                     *plugin-template-new-features*
 
-Added llscheck.yml - A GitHub workflow that detects type annotation issues!
+- Added llscheck.yml - A GitHub workflow that detects type annotation issues!
+- Added urlchecker.yml - A GitHub workflow that finds broken URLs!
 
 
 ===============================================================================
